# p2p-screencast

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: behaviour.rs  main.rs  swarm.rs  transport.rs
client/src/coordinator/: mod.rs  ws.rs
client/src/ui/: mod.rs
rendezvous-node/: Cargo.toml
rendezvous-node/src/: main.rs
rendezvous-point/: Cargo.toml
rendezvous-point/src/: main.rs
signal/: Cargo.toml
signal/src/: main.rs
