[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
webrtc = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-tungstenite = {version = "0.29", features = ["tokio-runtime"]}
futures = "0.3"
egui = "0.31"
